--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -2,27 +2,22 @@ FROM php:7.2.1-fpm-stretch
 
 LABEL maintainer="Leon <nian0408@foxmail.com>"
 
-ENV REDIS-VERSION="4.2.0"
+COPY ./sources.list /etc/apt/sources.list
 
 RUN apt-get update && apt-get install -y gnupg apt-transport-https; \
     curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -; \
 	curl https://packages.microsoft.com/config/debian/9/prod.list > /etc/apt/sources.list.d/mssql-release.list; \
 	apt-get update; \
-	apt-get install -y --no-install-recommends libargon2-dev msodbcsql17; \
-    ACCEPT_EULA=Y apt-get install -y --no-install-recommends mssql-tools; \
+	apt-get install -y --no-install-recommends libfreetype6-dev libjpeg62-turbo-dev zlib1g-dev libpng-dev; \
+    ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql17; \
+    ACCEPT_EULA=Y apt-get install -y --no-install-r\ecommends mssql-tools; \
 	ACCEPT_EULA=Y apt-get install -y --no-install-recommends unixodbc-dev; \
     \
-    curl -fsSL https://github.com/phpredis/phpredis/archive/${REDIS-VERSION}.tar.gz -o redis.tar.gz; \
-    mkdir -p /tmp/redis; \
-    tar -xf redis.tar.gz -C /tmp/redis --strip-components=1; \
-    rm redis.tar.gz; \
-    docker-php-ext-configure /tmp/redis --enable-redis; \
-    docker-php-ext-install /tmp/redis; \
-    rm -r /tmp/redis; \
+    docker-php-ext-install pdo gd pdo_mysql zip; \
+    pecl channel-update pecl.php.net; \
+    pecl install redis pdo_sqlsrv sqlsrv; \
     \
-    pecl install pdo_mysql; \
-    pecl install sqlsrv; \
-    pecl install pdo_sqlsrv; \
-    docker-php-ext-enable pdo_sqlsrv sqlsrv; \
+    docker-php-ext-enable redis gd pdo_mysql pdo_sqlsrv sqlsrv; \
+    \
     rm -rf /var/lib/apt/lists/*; \
     apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false
